packages/scaml.1.2.0~pre7/tests/fail/convert_function.ml
open SCaml
let x = fun x -> x + Int 1
